# Stonefish

Docker/: Dockerfile.dev
fist sim/: CMakeLists.txt  Readme
fist sim/src/sc1/: UnderwaterTestApp.cpp  UnderwaterTestApp.h  UnderwaterTestManager.cpp  main.cpp
